src/assets/style/less/app.less
/* ... */
#g3w-sidebar.sidebar .sidebar-button.toggled                                                   { color: #fff !important; box-shadow: 0 2px 5px rgba(0,0,0, 0.2); }
#g3w-sidebar.sidebar .sidebar-button.sidebar-button-icon                                       { background-color: transparent !important; }
#g3w-sidebar.sidebar .g3w-sidebarpanel                                                         { position: relative; color: #FFF; padding: 10px 15px 10px 15px; }
#g3w-sidebar.sidebar .g3w-sidebarpanel .g3w-panel .g3w-panel-form button.run_button            { margin-top: 5px; font-weight: bold; }
#g3w-sidebar.sidebar .g3w-sidebarpanel #g3w-sidebarpanel-header-placeholder                    { min-height: 35px; border-bottom: 1px solid #FFF; margin-bottom: 5px; }
#g3w-sidebar.sidebar .g3w-sidebarpanel .g3w-sidebarpanel-placeholder h3                        { margin-top: 0; }
#g3w-sidebar.sidebar .close-pane-button                                                        { caret-color: rgba(0,0,0,0); color: transparent; border-radius: 30%; margin-top: 5px; line-height: 1.5em; height: 1.3em; width: 1.3em; box-shadow: 0 2px 4px rgba(0,0,0,.2); }
#g3w-sidebar.sidebar .close-pane-button:hover                                                  { cursor: pointer; }
#g3w-sidebar.sidebar .close-pane-button .panel-icon                                            { color: #fff; }
#g3w-sidebar.sidebar .treeview-label                                                           { font-size: 1.1em; font-weight: bold; margin-left: 5px; }
#g3w-sidebar.sidebar .menu-items                                                               { padding: 10px 15px; }
#g3w-sidebar.sidebar .menu-items li                                                            { background-color: lighten(#222d32, 10%); border-radius: .25rem; padding: 2px; margin-bottom: 2px; color: #FFF; cursor: pointer; }
#g3w-sidebar.sidebar .menu-items li.toggled                                                    { color: lighten(#222d32, 10%); background-color: #fff; }
#g3w-sidebar.sidebar .menu-items li.toggled:hover                                              { background-color: #fff; }
#g3w-sidebar.sidebar .menu-items li:hover                                                      { background-color: lighten(#222d32,15%); }
#g3w-sidebar.sidebar .sidebar-menu > li,
#g3w-sidebar.sidebar .sidebar-divider                                                          { border-bottom: 1px solid #21292d; }
#g3w-sidebar.sidebar .sidebar-menu > li:last-child,
#g3w-sidebar.sidebar .sidebar-divider:last-child                                               { border:0; }

/* color  icons of sidebar */
#g3w-sidebar.sidebar #g3w-sidebarcomponents .sidebaritem a .fa-search                          { color: #8DC3E3; }
#g3w-sidebar.sidebar #g3w-sidebarcomponents .sidebaritem a :is(.fa-map-o, .fa-map)             { color: #019A4C; }
#g3w-sidebar.sidebar #g3w-sidebarcomponents .sidebaritem a :is(.fa-gears, .fa-cogs)            { color: #FFE721; }
#g3w-sidebar.sidebar #g3w-sidebarcomponents .sidebaritem a .fa-print                           { color: #FF9B21; }
#g3w-sidebar.sidebar #g3w-sidebarcomponents .sidebaritem a :is(.fa-file-code-o, .fa-file-code) { color: #fff; }
#g3w-sidebar.sidebar #g3w-sidebarcomponents #spatialbookmarks.sidebaritem a i                  { color: #00bcd4; }

.main-sidebar, .main-sidebar-mobile, .left-side                                                { width: 350px; padding-top: 50px; }
:is(.main-sidebar, .main-sidebar-mobile, .left-side) .btn.quick-action                         { color: #bbb; background-color: #222d32; border: 2px solid #888; }
:is(.main-sidebar, .main-sidebar-mobile, .left-side) .btn.quick-action:hover                   { color: #bbb; background-color: #222d32; border: 2px solid #888; }

.datetimeinput                                                                                 { color: var(--skin-color); }
#g3w-sidebar.sidebar .sidebar-button-run                                                       { background-color: var(--skin-color) !important; }
#g3w-sidebar.sidebar .sidebar-button                                                           { color: var(--skin-color); }
#g3w-sidebar.sidebar .sidebar-button.toggled                                                   { background-color: var(--skin-color) !important; }
#g3w-sidebar.sidebar ul.sidebar-menu li.sidebaritem a span.treeview-label                      { color: #FFF !important; }

.skin-blue   #g3w-sidebar.sidebar ul.sidebar-menu li.sidebaritem a:hover                       { color: lighten(@light-blue, 30%) !important; }
.skin-green  #g3w-sidebar.sidebar ul.sidebar-menu li.sidebaritem a:hover                       { color: #a1e096 !important; }
.skin-purple #g3w-sidebar.sidebar ul.sidebar-menu li.sidebaritem a:hover                       { color: lighten(@purple, 30%) !important; }
.skin-red    #g3w-sidebar.sidebar ul.sidebar-menu li.sidebaritem a:hover                       { color: lighten(@red, 30%) !important; }
.skin-yellow #g3w-sidebar.sidebar ul.sidebar-menu li.sidebaritem a:hover                       { color: lighten(@yellow, 30%) !important; }

:root {
  @media (max-width: 767px) {
    a.sidebar-aside-toggle                          { display: none !important; }
    .main-sidebar, .main-sidebar-mobile, .left-side { transform: translate(-100%, 0); width: 100%; }
  }
}

/**************************************************************************************
 * 5. Viewport
 **************************************************************************************/

.g3w-viewport                                                                                  { position: relative; background: #fff; overflow:hidden; line-height: 0; }
.g3w-viewport #application-notifications                                                       { position:absolute; top: 55px; border-radius: 3px; left: 0; z-index: 100; font-size: 25px; }
/* ... */

